idf_component_register(SRCS "main_la.c" "logic_analizer_sump.c" "logic_analizer_hal.c" "logic_analizer_ll.c"
                    "../logic_analizer_test_sample/logic_analizer_test_i2c.c"
                    "../logic_analizer_test_sample/logic_analizer_test_sample.c"
                    INCLUDE_DIRS "../include" 
                    )
