idf_component_register(SRCS "main_la.c" "logic_analyzer_sump.c" "logic_analyzer_hal.c" "logic_analyzer_ll.c"
                    "../logic_analyzer_test_sample/logic_analyzer_test_i2c.c"
                    "../logic_analyzer_test_sample/logic_analyzer_test_sample.c"
                    INCLUDE_DIRS "../include" 
                    )
